20080203	Continuing on state variables (unit tests etc).
20080205        [0.4.x branch]  Switching order of DINCLUDE and XINCLUDE in
		src/devices/Makefile (thanks to Ning Zhao for the tip).
20080210	Adding -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC to CFLAGS for
		debug builds.
20080222	Beginning on the main run loop, GXemul::ExecuteCycles.
		[0.4.x branch]  Adding a DEV_DISK_OFFSET_HIGH32 register, for
		reading/writing the top 32 bits of the offset register (useful
		for emulated 32-bit archs), as suggested by Julian Elischer.
20080226	Implementing an IRInstruction base class, and some initial
		IR instructions (simple adds, moves, stores).
20080227	Continuing on IRInstruction stuff; unit tests to see that
		automatic native code generation kicks in, etc.
		Implementing a simple IRBlockCache, which is just a linear
		memory range with PROT_EXEC, which is reset when it overflows.
		Beginning on a (so far dummy) IRNativeAMD64 code generator.
		Adding a configure option for disabling native code generation
		support completely.
20080229	Rethinking how the IR stuff should work: I'll probably use
		simple and traditional interpretation by default (read instr,
		decode, execute), and only let native code generation via some
		form of IR kick in when necessary. Two advantages: it will be
		easier to add new cpu types (because an interpretation switch/
		case block is very easy to understand), and there will be no
		waste of memory (for IR data) for code which is not commonly
		used.
		Removing IRBlock and IRInstruction, but keeping IRBlockCache
		and IRNativeAMD64 for later.
		The IRBlockCache can now be resized during runtime (and it
		expands automatically if necessary).
20080314	Working on the main loop, GXemul::ExecuteCycles(), which should
		call each component's Run function in suitable proportions.
		Adding a CPUComponent base class, from which MIPS_CPUComponent
		inherits.
20080316	Switching from CVS to SVN.